force-app/main/default/objects/Opportunity/fields/CWS_MEDDIC_Management_Notes__c.field-meta.xml
<CustomField>
    <fullName>CWS_MEDDIC_Management_Notes__c</fullName>
    <label>MEDDIC Management Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>