force-app/main/default/objects/Opportunity/fields/CWS_MEDDIC_Management_Review__c.field-meta.xml
<CustomField>
    <fullName>CWS_MEDDIC_Management_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>By Checking this box you have reviewed this opportunity for MEDDIC completeness and Opportunity forecast</inlineHelpText>
    <label>MEDDIC Management Review</label>
    <type>Checkbox</type>
</CustomField>