force-app/main/default/objects/Opportunity/fields/CWS_Meddic_Position__c.field-meta.xml
<CustomField>
    <fullName>CWS_Meddic_Position__c</fullName>
    <label>Meddic Position</label>
    <length>20</length>
    <type>Text</type>
</CustomField>