force-app/main/default/objects/Opportunity/fields/CWS_Meddic_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>CWS_Meddic_Review_Date__c</fullName>
    <inlineHelpText>Please add the date on which Meddic was reviewed by the management</inlineHelpText>
    <label>Meddic Review Date</label>
    <type>Date</type>
</CustomField>