force-app/main/default/objects/Opportunity/fields/CWS_MetNum__c.field-meta.xml
<CustomField>
    <fullName>CWS_MetNum__c</fullName>
    <formula>IF (ISPICKVAL ( CWS_Metrics_Position__c ,&quot;Positive&quot;),5,
IF (ISPICKVAL ( CWS_Metrics_Position__c ,&quot;Unknown&quot;),3,
IF (ISPICKVAL ( CWS_Metrics_Position__c ,&quot;Negative&quot;),1,0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MetNum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>