force-app/main/default/objects/Opportunity/fields/CWS_Metrics__c.field-meta.xml
<CustomField>
    <fullName>CWS_Metrics__c</fullName>
    <inlineHelpText>What is the quantifiable business value (#,$,%,a-b) for change now?</inlineHelpText>
    <label>Metrics</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>