force-app/main/default/objects/Opportunity/fields/CWS_Metrics_Position__c.field-meta.xml
<CustomField>
    <fullName>CWS_Metrics_Position__c</fullName>
    <inlineHelpText>HARD AND SOFT MEASURES AND VALUE DOCUMENTED (+)
NO CLEAR IMPACTS OR MEASURES (-)</inlineHelpText>
    <label>Metrics Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>