force-app/main/default/objects/Opportunity/fields/CWS_Min_Commit_QR__c.field-meta.xml
<CustomField>
    <fullName>CWS_Min_Commit_QR__c</fullName>
    <inlineHelpText>Captures amount of quota retirement for Min Commit products on this Opportunity.</inlineHelpText>
    <label>CMS – Incremental ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>