force-app/main/default/objects/Opportunity/fields/CWS_Need_Provisioning_Check__c.field-meta.xml
<CustomField>
    <fullName>CWS_Need_Provisioning_Check__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Does this Opportunity need an additional provisioning check? This applicable for In-App transactions and first time Marketplace transactions.</description>
    <inlineHelpText>Indicates whether this Opportunity needs an additional provisioning check; applicable for In-App transactions and first time Marketplace transactions.</inlineHelpText>
    <label>Need Provisioning Check?</label>
    <type>Checkbox</type>
</CustomField>