force-app/main/default/objects/Opportunity/fields/CWS_Negative_Impact_To_The_Business__c.field-meta.xml
<CustomField>
    <fullName>CWS_Negative_Impact_To_The_Business__c</fullName>
    <inlineHelpText>Captures the negative impact the prospect&apos;s challenges have on his/her business.</inlineHelpText>
    <label>Negative impact to the business?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>