force-app/main/default/objects/Opportunity/fields/CWS_No_of_Workstations__c.field-meta.xml
<CustomField>
    <fullName>CWS_No_of_Workstations__c</fullName>
    <inlineHelpText>Captures the prospect&apos;s number of workstations/ servers managed during sales discover.</inlineHelpText>
    <label># of Workstations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>