force-app/main/default/objects/Opportunity/fields/CWS_Non_Min_Commit_Forecast_QR__c.field-meta.xml
<CustomField>
    <fullName>CWS_Non_Min_Commit_Forecast_QR__c</fullName>
    <label>Non Min Commit Forecast/QR</label>
    <summarizedField>OpportunityLineItem.CWS_Non_Min_Commit_Forecast_QR__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>