force-app/main/default/objects/Opportunity/fields/CWS_NonMin_Min_Total_ACV__c.field-meta.xml
<CustomField>
    <fullName>CWS_NonMin_Min_Total_ACV__c</fullName>
    <description>Total of Nonmin commit product acv, min commit on opportunity.</description>
    <formula>IF(  AND(  OR(ISBLANK(CWS_Min_Commit_QR__c),CWS_Min_Commit_QR__c = 0) , OR(ISBLANK(CWS_CW_Incremental_ACV__c),CWS_CW_Incremental_ACV__c=0)),SBQQ__PrimaryQuote__r.CWS_Quote_ACV__c,CWS_Min_Commit_QR__c + CWS_CW_Incremental_ACV__c 


)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Equals Quote Header ACV if Min Commit QR is null, else equals sum of ACV for Non Min Commit Opportunity Products + Min Commit QR. For Master (legacy Min Commit) Opportunities, equals Quote Header ACV if Min Commit QR is null, else equals Min Commit QR.</inlineHelpText>
    <label>Total ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>