force-app/main/default/objects/Opportunity/fields/CWS_Number_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>CWS_Number_of_Employees__c</fullName>
    <label>Number of Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>