force-app/main/default/objects/Opportunity/fields/CWS_Number_of_Min_Commit_Records__c.field-meta.xml
<CustomField>
    <fullName>CWS_Number_of_Min_Commit_Records__c</fullName>
    <inlineHelpText>Calculates the number of min commits on an opportunity for validations and lightning page filters</inlineHelpText>
    <label>Number of Min Commit Records</label>
    <summaryForeignKey>CWS_Minimum_Commit__c.CWS_Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>