force-app/main/default/objects/Opportunity/fields/CWS_NurtureReason__c.field-meta.xml
<CustomField>
    <fullName>CWS_NurtureReason__c</fullName>
    <label>Nurture Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Timeline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>