force-app/main/default/objects/Opportunity/fields/CWS_NurtureReasonDetails__c.field-meta.xml
<CustomField>
    <fullName>CWS_NurtureReasonDetails__c</fullName>
    <label>Nurture Reason Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>