force-app/main/default/objects/Opportunity/fields/CWS_OF_Expired_Restriction__c.field-meta.xml
<CustomField>
    <fullName>CWS_OF_Expired_Restriction__c</fullName>
    <formula>TEXT(SBQQ__PrimaryQuote__r.CWS_OF_Expiration_Reason__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates restriction for expired Order Form.</inlineHelpText>
    <label>OF Expired - Restriction</label>
    <type>Text</type>
</CustomField>