force-app/main/default/objects/Opportunity/fields/CWS_On_Hold__c.field-meta.xml
<CustomField>
    <fullName>CWS_On_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This indicates if the renewal opportunity is put on hold</inlineHelpText>
    <label>On-Hold</label>
    <type>Checkbox</type>
</CustomField>