force-app/main/default/objects/Opportunity/fields/CWS_On_Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>CWS_On_Hold_Reason__c</fullName>
    <inlineHelpText>This indicates the reason for putting renewal opportunity on hold</inlineHelpText>
    <label>On-Hold Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>