force-app/main/default/objects/Opportunity/fields/CWS_Operation_Service_Delivery_Model__c.field-meta.xml
<CustomField>
    <fullName>CWS_Operation_Service_Delivery_Model__c</fullName>
    <inlineHelpText>Captures the prospect&apos;s operation service delivery model during sales discovery.</inlineHelpText>
    <label>Operation Service Delivery Model</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Do it yourself</fullName>
            </value>
            <value>
                <fullName>As a Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>