force-app/main/default/objects/Opportunity/fields/CWS_Opportunity_No__c.field-meta.xml
<CustomField>
    <fullName>CWS_Opportunity_No__c</fullName>
    <displayFormat>OPT-{00000000}</displayFormat>
    <inlineHelpText>Captures the Opportunity Number.</inlineHelpText>
    <label>Opportunity Number</label>
    <type>AutoNumber</type>
</CustomField>