force-app/main/default/objects/Opportunity/fields/CWS_Opportunity_Owner_Is_Running_User__c.field-meta.xml
<CustomField>
    <fullName>CWS_Opportunity_Owner_Is_Running_User__c</fullName>
    <description>As of 5-18-2021 this was not a support salesforce standard feature.  Knowledge Article Number	000338834</description>
    <formula>if(OwnerId = $User.Id,1,0)</formula>
    <label>Opportunity Owner Is Running User</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>