force-app/main/default/objects/Opportunity/fields/CWS_Opportunity_Validation__c.field-meta.xml
<CustomField>
    <fullName>CWS_Opportunity_Validation__c</fullName>
    <description>Contract Admins and Order managers will be validating all the opportunities and will be using this field to track the validated opportunities</description>
    <label>Opportunity Validation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Validated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>