force-app/main/default/objects/Opportunity/fields/CWS_Opportunity_Validation_Comments__c.field-meta.xml
<CustomField>
    <fullName>CWS_Opportunity_Validation_Comments__c</fullName>
    <label>Opportunity Validation Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>