force-app/main/default/objects/Opportunity/fields/CWS_OpportunityOwnerName__c.field-meta.xml
<CustomField>
    <fullName>CWS_OpportunityOwnerName__c</fullName>
    <formula>Owner.FirstName + &quot; &quot; + Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Owner Name</label>
    <type>Text</type>
</CustomField>