force-app/main/default/objects/Opportunity/fields/CWS_OriginalOpportunityNumber__c.field-meta.xml
<CustomField>
    <fullName>CWS_OriginalOpportunityNumber__c</fullName>
    <description>In an opportunity if (Incremental ACV) value goes to negative after removing the product. Original Opportunity Number field helps to add the Original opportunity number.</description>
    <label>Original Opportunity Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>