force-app/main/default/objects/Opportunity/fields/CWS_Override_ACV_Calculation__c.field-meta.xml
<CustomField>
    <fullName>CWS_Override_ACV_Calculation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked marks that the user is overriding the current ACV</inlineHelpText>
    <label>Override ACV Calculation</label>
    <type>Checkbox</type>
</CustomField>