force-app/main/default/objects/Opportunity/fields/CWS_Owners_Department__c.field-meta.xml
<CustomField>
    <fullName>CWS_Owners_Department__c</fullName>
    <formula>Owner.Division</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner&apos;s Department</label>
    <type>Text</type>
</CustomField>