force-app/main/default/objects/Opportunity/fields/CWS_Passed_Through_Nurture_Campaign__c.field-meta.xml
<CustomField>
    <fullName>CWS_Passed_Through_Nurture_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Passed Through Nurture Campaign</label>
    <type>Checkbox</type>
</CustomField>