force-app/main/default/objects/Opportunity/fields/CWS_Passed_to_Nurture_Campaign_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>CWS_Passed_to_Nurture_Campaign_Date_Time__c</fullName>
    <label>Passed to Nurture Campaign Date/Time</label>
    <type>DateTime</type>
</CustomField>