force-app/main/default/objects/Opportunity/fields/CWS_Period_of_Fixed_Usage_Commit_Ramp__c.field-meta.xml
<CustomField>
    <fullName>CWS_Period_of_Fixed_Usage_Commit_Ramp__c</fullName>
    <label>Period of Fixed/ Usage Commit Ramp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>