force-app/main/default/objects/Opportunity/fields/CWS_Phone__c.field-meta.xml
<CustomField>
    <fullName>CWS_Phone__c</fullName>
    <inlineHelpText>Captures Opportunity contact&apos;s phone.</inlineHelpText>
    <label>Phone</label>
    <length>10</length>
    <type>Text</type>
</CustomField>