force-app/main/default/objects/Opportunity/fields/CWS_Primary_Prospect_Tracker__c.field-meta.xml
<CustomField>
    <fullName>CWS_Primary_Prospect_Tracker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Prospect Tracker</label>
    <referenceTo>Prospect_Tracking__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>