force-app/main/default/objects/Opportunity/fields/CWS_Prior_Billing_Period__c.field-meta.xml
<CustomField>
    <fullName>CWS_Prior_Billing_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Looks up to the billing period 1 month before the opportunity created date, used for min commit calculator</inlineHelpText>
    <label>Prior Billing Period</label>
    <referenceTo>CWS_BillingPeriod__c</referenceTo>
    <relationshipLabel>Prior Billing Period Opportunities</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>