force-app/main/default/objects/Opportunity/fields/CWS_Probability__c.field-meta.xml
<CustomField>
    <fullName>CWS_Probability__c</fullName>
    <inlineHelpText>Indicates this Opportunity&apos;s probability to close.</inlineHelpText>
    <label>Probability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pipeline: 10%</fullName>
                <label>10%</label>
            </value>
            <value>
                <fullName>Pipeline: 15%</fullName>
                <label>15%</label>
            </value>
            <value>
                <fullName>Pipeline: 30%</fullName>
                <label>30%</label>
            </value>
            <value>
                <fullName>Best Case: 60%</fullName>
                <label>60%</label>
            </value>
            <value>
                <fullName>Commit: 90%</fullName>
                <label>90%</label>
            </value>
            <value>
                <fullName>Closed: 100%</fullName>
                <label>100%</label>
            </value>
            <value>
                <fullName>Omitted: 0%</fullName>
                <label>0%</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>