force-app/main/default/objects/Opportunity/fields/CWS_Program_Interest__c.field-meta.xml
<CustomField>
    <fullName>CWS_Program_Interest__c</fullName>
    <description>Select to indicate which program is of interest to this prospect.</description>
    <label>Program Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Program_Interest</valueSetName>
    </valueSet>
</CustomField>