force-app/main/default/objects/Opportunity/fields/CWS_Promo_Code_Field__c.field-meta.xml
<CustomField>
    <fullName>CWS_Promo_Code_Field__c</fullName>
    <inlineHelpText>Captures a promo code used on this Opportunity.</inlineHelpText>
    <label>Promo Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>