force-app/main/default/objects/Opportunity/fields/CWS_QR_Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>CWS_QR_Approval_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will get populated if the Approval needs to be triggered.</description>
    <inlineHelpText>This field will get populated if the Approval needs to be triggered.</inlineHelpText>
    <label>QR Approval Required</label>
    <type>Checkbox</type>
</CustomField>