force-app/main/default/objects/Opportunity/fields/CWS_QR_Calculated__c.field-meta.xml
<CustomField>
    <fullName>CWS_QR_Calculated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if quota retirement for the Opportunity was calculated successfully</description>
    <inlineHelpText>Indicates if quota retirement for the Opportunity was calculated successfully</inlineHelpText>
    <label>QR Calculated</label>
    <type>Checkbox</type>
</CustomField>