force-app/main/default/objects/Opportunity/fields/CWS_QR_Calculation_Status__c.field-meta.xml
<CustomField>
    <fullName>CWS_QR_Calculation_Status__c</fullName>
    <description>Indicates the QR calculation status</description>
    <inlineHelpText>Indicates the QR calculation status</inlineHelpText>
    <label>QR Calculation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Calculated</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>