force-app/main/default/objects/Opportunity/fields/CWS_QR_StartMonth__c.field-meta.xml
<CustomField>
    <fullName>CWS_QR_StartMonth__c</fullName>
    <description>This field will be populated by the batch to keep track of the month from which the QR calculation should start</description>
    <inlineHelpText>This field will be populated by the batch to keep track of the month from which the QR calculation should start</inlineHelpText>
    <label>QR StartMonth</label>
    <type>Date</type>
</CustomField>