force-app/main/default/objects/Opportunity/fields/CWS_Ramp_Options__c.field-meta.xml
<CustomField>
    <fullName>CWS_Ramp_Options__c</fullName>
    <label>Ramp Options</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CWS_Master__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Commit Ramp</fullName>
            </value>
            <value>
                <fullName>Minimum Commit Ramp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>