force-app/main/default/objects/Opportunity/fields/CWS_ReasonforRecycling__c.field-meta.xml
<CustomField>
    <fullName>CWS_ReasonforRecycling__c</fullName>
    <label>Reason for Recycling</label>
    <length>250</length>
    <type>Text</type>
</CustomField>