force-app/main/default/objects/Opportunity/fields/CWS_Recycled_Reason_New__c.field-meta.xml
<CustomField>
    <fullName>CWS_Recycled_Reason_New__c</fullName>
    <label>Recycled Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No show intro call</fullName>
            </value>
            <value>
                <fullName>Improperly routed</fullName>
            </value>
            <value>
                <fullName>Timeline</fullName>
            </value>
            <value>
                <fullName>Did not meet requirements</fullName>
            </value>
            <value>
                <fullName>Price/Budget issues</fullName>
            </value>
            <value>
                <fullName>Already existing opportunity or owns product</fullName>
            </value>
            <value>
                <fullName>No buying influence on opportunity</fullName>
            </value>
            <value>
                <fullName>Incomplete or missing information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>