force-app/main/default/objects/Opportunity/fields/CWS_Region__c.field-meta.xml
<CustomField>
    <fullName>CWS_Region__c</fullName>
    <description>Region from the Account.</description>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Region</valueSetName>
    </valueSet>
</CustomField>