force-app/main/default/objects/Opportunity/fields/CWS_Rejected_Approval_Count__c.field-meta.xml
<CustomField>
    <fullName>CWS_Rejected_Approval_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Stores the no of times the approval was rejected</description>
    <inlineHelpText>Captures the number of times the Opportunity was rejected for Account Restriction approvals.</inlineHelpText>
    <label>Rejected Approval Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>