force-app/main/default/objects/Opportunity/fields/CWS_Renewal_Attention_Needed__c.field-meta.xml
<CustomField>
    <fullName>CWS_Renewal_Attention_Needed__c</fullName>
    <description>Based on this field we would be sending out a notification to the AM as this opportunity needs special attention.</description>
    <inlineHelpText>Indicates whether a notification will be sent to the AM indicating this Opportunity needs special attention.</inlineHelpText>
    <label>Renewal Attention Needed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Perpetual Product</fullName>
            </value>
            <value>
                <fullName>Billing-only Product</fullName>
            </value>
            <value>
                <fullName>Incorrect Currency</fullName>
            </value>
            <value>
                <fullName>Account Restriction Status Change</fullName>
            </value>
            <value>
                <fullName>Incorrect Legal Entity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>