force-app/main/default/objects/Opportunity/fields/CWS_Renewal_Provision_Changes_Completed__c.field-meta.xml
<CustomField>
    <fullName>CWS_Renewal_Provision_Changes_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This indicates if the removal of provisioning is completed by the order management team.</inlineHelpText>
    <label>Renewal Provision Changes Completed</label>
    <type>Checkbox</type>
</CustomField>