force-app/main/default/objects/Opportunity/fields/CWS_Route_to_Market__c.field-meta.xml
<CustomField>
    <fullName>CWS_Route_to_Market__c</fullName>
    <inlineHelpText>Captures the prospect&apos;s route to market; used for routing to BDR and PSE/SE pools.</inlineHelpText>
    <label>Route to Market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Channel</fullName>
            </value>
            <value>
                <fullName>IIT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>