force-app/main/default/objects/Opportunity/fields/CWS_Routing_Override_Reason__c.field-meta.xml
<CustomField>
    <fullName>CWS_Routing_Override_Reason__c</fullName>
    <description>Required when routing it done manually and not by LeanData</description>
    <label>Routing Override Reason</label>
    <type>TextArea</type>
</CustomField>