force-app/main/default/objects/Opportunity/fields/CWS_Share_with_Bill_To_Account__c.field-meta.xml
<CustomField>
    <fullName>CWS_Share_with_Bill_To_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Captures the Share with Bill To Account for this Opportunity.</inlineHelpText>
    <label>Share with Bill To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Share Lookup)</relationshipLabel>
    <relationshipName>Opportunities5</relationshipName>
    <type>Lookup</type>
</CustomField>