force-app/main/default/objects/Opportunity/fields/CWS_Ship_To_Account__c.field-meta.xml
<CustomField>
    <fullName>CWS_Ship_To_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Captures the Ship To Account associated to this Opportunity.</inlineHelpText>
    <label>Ship To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Ship To Account)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>