force-app/main/default/objects/Opportunity/fields/CWS_Ship_To_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>CWS_Ship_To_Account_Name__c</fullName>
    <description>Captures the Name of the Ship To Account associated to this Opportunity.</description>
    <formula>CWS_Ship_To_Account__r.Name</formula>
    <label>Ship To Account Name</label>
    <type>Text</type>
</CustomField>