force-app/main/default/objects/Opportunity/fields/CWS_Single_Distributor_Validation__c.field-meta.xml
<CustomField>
    <fullName>CWS_Single_Distributor_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this field is checked true then this Opportunity cannot move to Closed Won because the company has accepted a Quote from another distributor.</description>
    <inlineHelpText>If this field is checked true then this Opportunity cannot move to Closed Won because the company has accepted a Quote from another distributor.</inlineHelpText>
    <label>Single Distributor Validation</label>
    <type>Checkbox</type>
</CustomField>