force-app/main/default/objects/Opportunity/fields/CWS_Skip_Routing__c.field-meta.xml
<CustomField>
    <fullName>CWS_Skip_Routing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Routing</label>
    <type>Checkbox</type>
</CustomField>