force-app/main/default/objects/Opportunity/fields/CWS_Snapline_Billing_Period__c.field-meta.xml
<CustomField>
    <fullName>CWS_Snapline_Billing_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Looks up to the billing period 4 months before the opportunity created date, used for min commit calculator</inlineHelpText>
    <label>Snapline Billing Period</label>
    <referenceTo>CWS_BillingPeriod__c</referenceTo>
    <relationshipLabel>Snapline Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>