force-app/main/default/objects/Opportunity/fields/CWS_Snapline_Reset_Date__c.field-meta.xml
<CustomField>
    <fullName>CWS_Snapline_Reset_Date__c</fullName>
    <description>Indicates the date until when the quota retirement is fixed</description>
    <inlineHelpText>Indicates the date until when the quota retirement is fixed</inlineHelpText>
    <label>Snapline Reset Date</label>
    <type>Date</type>
</CustomField>