force-app/main/default/objects/Opportunity/fields/CWS_Sold_To_Account__c.field-meta.xml
<CustomField>
    <fullName>CWS_Sold_To_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Captures the Sold To Account associated to this Opportunity.</inlineHelpText>
    <label>Sold To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Sold To Account)</relationshipLabel>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>