force-app/main/default/objects/Opportunity/fields/CWS_Sold_To_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>CWS_Sold_To_Contact_Name__c</fullName>
    <description>Captures the Name of the Sold To Contact associated to this Opportunity.</description>
    <formula>CWS_Sold_To_Contact__r.FirstName &amp; &quot; &quot; &amp; CWS_Sold_To_Contact__r.LastName</formula>
    <label>Sold To (Contact) Name</label>
    <type>Text</type>
</CustomField>