force-app/main/default/objects/Opportunity/fields/CWS_Source_By__c.field-meta.xml
<CustomField>
    <fullName>CWS_Source_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Captures the BDR who sourced the Opportunity.</description>
    <inlineHelpText>Captures the BDR who sourced the Opportunity.</inlineHelpText>
    <label>Sourced By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>