force-app/main/default/objects/Opportunity/fields/CWS_SourceSystem__c.field-meta.xml
<CustomField>
    <fullName>CWS_SourceSystem__c</fullName>
    <description>Used for legacy data migration</description>
    <label>Source System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>