force-app/main/default/objects/Opportunity/fields/CWS_Stage_Updated_Through_Automation__c.field-meta.xml
<CustomField>
    <fullName>CWS_Stage_Updated_Through_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is stamped by the opportunity Accept, Reject, Recycle flow and is used in a validation rule to prompt users to use the Accept/Reject/Recycle button. Not intended to be used within UI</description>
    <label>Stage Updated Through Automation</label>
    <type>Checkbox</type>
</CustomField>