force-app/main/default/objects/Opportunity/fields/CWS_Store_Bill_To_Id__c.field-meta.xml
<CustomField>
    <fullName>CWS_Store_Bill_To_Id__c</fullName>
    <inlineHelpText>Captures the Bill To ID for this Opportunity.</inlineHelpText>
    <label>Store Bill To Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>